# optiview

./: .dev_notes.md  .gitattributes  .gitignore  Makefile  README.md  mkdocs.yml  mypy.ini  project_state.yaml  pyproject.toml  sanitize_predictions.py
.streamlit/: config.toml
alembic/: env.py
alembic/versions/: 1357efff0a5b_initial_composite_schema.py  17e405df967f_add_synced_jobs_table.py  30dd7ec0b96a_initial_database_schema.py  3fa2c8111cbe_add_tuning_settings_table.py  8b3b24072caa_add_evaluated_settings_and_predicted_.py  94843f39e513_initial_schema.py  bec65ff74ae3_initial_composite_schema.py  c14cd3dbed5f_remove_expert_advisor_from_.py  c601aadfc9d1_add_params_json_to_predicted_settings.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
docs/: _current_project_structure.md  index.md  transition_to_sqlite.md  walk_forward_eda.md
docs/dev_notes/: architecture_overview.md  optiview_schema.md  project_structure.md
docs/user_guide/: bulk_predict.md  maintenance.md  theory_and_setup.md
scripts/: init_db.py
scripts/database/: get_db_path.py  init_db.py
scripts/maintenance/: health_check_optibatch.py  sync_jobs.py
src/optiview/: app.py  test_loader.py
src/optiview/analysis/: evaluate_predictions.py
src/optiview/data/: db_path.py  ini_tools.py  join_tools.py  loader.py  models.py  optiview.db
src/optiview/database/: db_paths.py  loader.py  models.py  query.py  session.py
src/optiview/maintenance/: missing_months_report.py
src/optiview/ml/: baseline_model.py  model_comparison.py  predict_next_month.py  walk_forward_model.py
src/optiview/ui/: Home.py  OptiView.py  app.py  queries.py  ui_components.py
src/optiview/viz/: boxplot.py  (+3 more)
(+34 files in other folders)
