[project]
name = "optiview"
version = "0.1.0"
description = ""
authors = [
    {name = "John Davis",email = "512jay@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.44.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "plotly (>=6.0.1,<7.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "pandas-stubs (>=2.2.3.250308,<3.0.0.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "types-seaborn (>=0.13.2.20250111,<0.14.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "xgboost (>=3.0.0,<4.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "catboost (>=1.2.8,<2.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-material (>=9.6.12,<10.0.0)"
]

[tool.poetry]
packages = [{include = "optiview", from = "src"}]

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
pytest = "^8.3.5"
ruff = "^0.11.5"
types-seaborn = "^0.13.2.20250111"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


